# libsql-js

./: .gitignore  .npmignore  Cargo.toml  README.md  auth.js  compat.js  index.d.ts  index.js  package-lock.json  package.json  promise.d.ts  promise.js  sqlite-error.js  tsconfig.json  wrapper.js
.cargo/: config.toml
.github/workflows/: CI.yml  ci.yml  publish.yml  windows-arm64-build.yml
docs/: api.md
examples/: example.js
examples/drizzle/: index.ts  package-lock.json  package.json  schema.sql
examples/hello/: example.js
examples/offline-writes/: example.js  package.json
examples/remote/: cloud-encryption.js  example.js  package.json
examples/sync/: example.js  package-lock.json  package.json
examples/vector/: package.json  vector.mjs
integration-tests/: package-lock.json  package.json
integration-tests/tests/: async.test.js  basic.test.js  concurrency.test.js  connections.test.js  extensions.test.js  sync.test.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
perf/: package.json  perf-better-sqlite3-iterate.js  perf-better-sqlite3.js  perf-iterate-better-sqlite3.js  perf-iterate-libsql.js  perf-libsql-iterate.js  perf-libsql.js  query-timeout.js
scripts/: update-version.py
src/: auth.rs  database.rs  errors.rs  lib.rs  query_timeout.rs  statement.rs
types/: auth.d.ts  auth.d.ts.map  index.d.ts  index.d.ts.map  promise.d.ts  promise.d.ts.map  sqlite-error.d.ts  sqlite-error.d.ts.map
