[package]
name = "libsql-js"
version = "0.5.1"
description = ""
authors = ["Pekka Enberg <penberg@iki.fi>"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libsql = { git = "https://github.com/levydsa/libsql/", rev = "3ad67a8ecf8a5a1070479bc5b1f16d2bd5357be3", features = ["encryption"] }
tracing = "0.1"
once_cell = "1.18.0"
tokio = { version = "1.29.1", features = [ "rt-multi-thread" ] }
neon = { version = "1.0.0", default-features = false, features = ["napi-6"] }

[profile.release]
lto = true
codegen-units = 1
debug = false
strip = true
panic = "abort"

