[package]
name = "libsql-js"
version = "0.6.0-pre.19"
description = ""
authors = ["Pekka Enberg <penberg@iki.fi>"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libsql = { version = "0.9.23", features = ["encryption"]  }
napi = { version = "2", default-features = false, features = ["napi6", "tokio_rt", "async"] }
napi-derive = "2"
once_cell = "1.18.0"
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = [ "rt-multi-thread" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
